
== DDT 0.9.0 ==
 * Issue #13: Added integrated debugging support, using CDT's GDB debugger integration. Supports:
   * Setting breakpoints, watchpoints.
   * Program threads and stack frame view. Non-stop mode (for supported GBDs).
   * Variables view. Dissambly view.
   * Reverse debugging (for supported GDB targets).
 * Fixed issue #19: NPE when opening editor with hyperlinks disabled

== DDT 0.8.1 (2013-09-23) ==
 * Documentation: added entry in [UserGuide#Eclipse_basics] about Eclipse memory settings optimization.
 * Fixed: Code Completion module list in import declarations now shows the module's DDoc.
 * Implemented: Code Completion now resolves:
   * auto declarations (resolved to the type of the initializer).
   * global type properties (.init, .sizeof, .alignof, etc.)
   * integral properties (.min, .max), float properties(.infinity, .nan, etc.), object properties (.classinfo).
   * static/dynamic array properties (.ptr, .length, .dup, etc.).
   * the type of bool/char/integral/floating/string/array literals (not map array though).
   * parentheses expression.
   * this/super literal expressions.
   * cast expression.
   * new expression.
 * Cleanup: Code Completion now shows no results if invoked after a float token ending in a dot.
 * Fixed 0.7.0 regression: Code Completion now locates all identifiers in multi-identifier variable declaration and multi-identifier alias declaration.
 * Fixed issue #7: Error parsing interface function with contracts but no body.
 * Fixed issue #10: Compiler installation search in preferences page.
 * Fixed issue #9: Control-click opens up new editor everytime
 * Fixed 0.8.0 regression: missing icon for D application launch action/configuration.

== DDT 0.8.0 (2013-08-30) ==
 * Updated DDT to latest version of DLTK (version 5.0, from Eclipse Kepler).
 * Changed: In DDoc view, the text of undefined macros now remains unmodified, instead of being replaced by empty text.