@@ -1,5 +1,5 @@
 Ⓗ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
-#@FLAG_AS_BROKEN_TEST《#test(IGNORE_BREAK_CHECK) #parser(AllowAnyErrors) #AST_SOURCE_EXPECTED(NoCheck) #IGNORE_BREAK_FLAG_CHECK(test)》
+#@FLAG_AS_BROKEN_TEST《#test(IGNORE_REMAINING_SOURCE_CHECK) #parser(AllowAnyErrors) #AST_SOURCE_EXPECTED(NoCheck) #IGNORE_BREAK_FLAG_CHECK(test)》
 
 #@LAMBDA_BODY《
   ►#?STRUCTURE_EXPECTED!【=> #@EXP_ASSIGN #?EXP_RULE_BROKEN【#@BREAK】● #@EXP_ASSIGN 】● 
